--- a/Servers/.project
+++ b/Servers/.project
@@ -3,9 +3,16 @@
 	<name>Servers</name>
 	<comment></comment>
 	<projects>
+		<project>LOL_API</project>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.wst.common.project.facet.core.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 	</natures>
 </projectDescription>
