--- a/Practice/src/main/resources/application.properties
+++ b/Practice/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.view.suffix=.jsp
 devtools.livereload.enabled=true
 
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/web?serverTimezone=UTC&useSSL=false&characterEncoding=utf8
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/web?serverTimezone=UTC&useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=@zxc3226659@
 
