--- a/Practice/bin/src/main/resources/application.properties
+++ b/Practice/bin/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port= 8110
 
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+devtools.livereload.enabled=true
+
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/web?serverTimezone=UTC&useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=@zxc3226659@
+
+mybatis.type-aliases-package=com.LOLAPI.Practice.DTO
